--- a/ChartApp/AndroidManifest.xml
+++ b/ChartApp/AndroidManifest.xml
@@ -18,5 +18,6 @@
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission><uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"/>
 
 </manifest> 
